Fill out template.

--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -92,7 +92,15 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
       }
 
       <div class="text-sm mr-4 dark:text-slate-400">
-        <Fragment set:html={footNote} />
+        <!-- TODO Add proper footnote
+        <span
+          class="w-5 h-5 md:w-6 md:h-6 md:-mt-0.5 bg-cover mr-1.5 rtl:mr-0 rtl:ml-1.5 float-left rtl:float-right rounded-sm bg-[url(https://onwidget.com/favicon/favicon-32x32.png)]"
+        ></span>
+
+				-->
+
+         Made by <a class="text-blue-600 hover:underline dark:text-gray-200" href="#todo">@ciso</a>
+         · No rights reserved ;)
       </div>
     </div>
   </div>
